--- a/travel-hanging-bag.html
+++ b/travel-hanging-bag.html
@@ -74,8 +74,20 @@
     .meta{ display:flex; gap:12px; flex-wrap:wrap; color:#555; margin:.3rem 0 1rem; }
     .meta .chip{ background:#f2f6fb; padding:.25rem .6rem; border-radius:20px; font-size:.9rem; letter-spacing:.02em; border:1px solid #e0edf8; }
 
-    .actions .button{ transition:transform 180ms ease, box-shadow 180ms ease; }
-    .actions .button:hover{ transform:translateY(-2px); box-shadow:0 8px 22px rgba(0,0,0,.10); }
+    /* ---------- Buttons: grey default, black on hover ---------- */
+    .button{
+      background:#e6e6e6 !important;
+      color:#111 !important;
+      border:1px solid #d9d9d9 !important;
+      transition:background .18s ease, color .18s ease, border-color .18s ease, box-shadow .18s ease !important;
+    }
+    .button:hover,
+    .button:focus-visible{
+      background:#111 !important;
+      border-color:#111 !important;
+      color:#fff !important;
+      box-shadow:0 10px 24px rgba(0,0,0,.18) !important;
+    }
 
     .note{ font-size:.9rem; color:#666; }
 
