--- a/luggage-bag.html
+++ b/luggage-bag.html
@@ -1,3 +1,6 @@
+All set — I swapped the quantity + add-to-cart for a single **Buy Now** button linked to your Stripe URL, and set all buttons to grey-by-default → black-on-hover (no pink anywhere). Here’s the full page:
+
+```html
 <!DOCTYPE HTML>
 <!--
   Phantom by HTML5 UP (customized for ELIRA LIVING)
@@ -24,7 +27,7 @@
   <link rel="stylesheet" href="assets/css/main.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-  <!-- Header/logo + page UI (consistent with Bathrobe page) -->
+  <!-- Header/logo + page UI -->
   <style>
     :root{ --logo-top:16px; --logo-left:22px; --burger-top:16px; --burger-right:22px; }
     html { scroll-behavior: smooth; }
@@ -44,7 +47,6 @@
     #main{ padding-top:0!important; }
     #main .inner{ padding-top:72px!important; }
     .product-header{ margin-top:6px; }
-
     .product-header.reveal h1{ margin-bottom:.4rem; }
     .product-header.reveal p{ color:#666; }
 
@@ -76,58 +78,20 @@
     .meta{ display:flex; gap:12px; flex-wrap:wrap; color:#555; margin:.3rem 0 1rem; }
     .meta .chip{ background:#f2f6fb; padding:.25rem .6rem; border-radius:20px; font-size:.9rem; letter-spacing:.02em; border:1px solid #e0edf8; }
 
-    .actions .button{ transition:transform 180ms ease, box-shadow 180ms ease; }
-    .actions .button:hover{ transform:translateY(-2px); box-shadow:0 8px 22px rgba(0,0,0,.10); }
-
-    .buy-row{ display:flex; align-items:center; gap:12px; margin:1rem 0 0.75rem; }
-    .qty{ display:flex; align-items:center; border:1px solid #e6e6e6; border-radius:10px; overflow:hidden; }
-    .qty button{ width:36px; height:36px; border:0; background:#fafafa; cursor:pointer; font-size:1.1rem; }
-    .qty input{ width:50px; height:36px; border:0; text-align:center; font-size:1rem; }
-/* ===== Quantity stepper: split (- | input | +) ===== */
-.qty{
-  display:inline-grid;
-  grid-template-columns:44px 64px 44px;   /* btn | input | btn */
-  height:44px;
-  border:1px solid #e6e6e6;
-  border-radius:10px;
-  overflow:hidden;
-  background:#fff;
-  box-sizing:border-box;
-}
-
-/* Buttons */
-.qty button{
-  all:unset;                               /* remove UA styles */
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
-  background:#fafafa;
-  font-size:20px;
-  font-weight:700;
-  line-height:1;
-  user-select:none;
-}
-.qty button:first-child{ border-right:1px solid #e6e6e6; }
-.qty button:last-child{  border-left:1px solid #e6e6e6;  }
-.qty button:focus-visible{ outline:2px solid #111; outline-offset:-2px; }
-
-/* Input */
-.qty input{
-  width:100%;
-  height:100%;
-  border:0;
-  text-align:center;
-  font-weight:600;
-  font-size:16px;
-  background:#fff;
-  box-sizing:border-box;
-}
-
-/* Hide native number spinners */
-.qty input[type="number"]::-webkit-outer-spin-button,
-.qty input[type="number"]::-webkit-inner-spin-button{ -webkit-appearance:none; margin:0; }
-.qty input[type="number"]{ -moz-appearance:textfield; appearance:textfield; }
+    /* ===== Buttons: grey by default, black on hover/focus (no pink) ===== */
+    .button{
+      background:#e6e6e6 !important;
+      color:#111 !important;
+      border:1px solid #d9d9d9 !important;
+      transition:background .18s ease, color .18s ease, border-color .18s ease, box-shadow .18s ease !important;
+    }
+    .button:hover,
+    .button:focus-visible{
+      background:#111 !important;
+      border-color:#111 !important;
+      color:#fff !important;
+      box-shadow:0 10px 24px rgba(0,0,0,.18) !important;
+    }
 
     .note{ font-size:.9rem; color:#666; }
 
@@ -140,25 +104,6 @@
 
     #header, #header *{ transform:none!important; }
     img{ aspect-ratio:auto; }
-    /* --- Remove pink hover for this page's buttons --- */
-/* Add to cart: keep current base (pink), turn jet black on hover/focus */
-#addToCart.button:hover,
-#addToCart.button:focus-visible{
-  background:#111 !important;
-  border-color:#111 !important;
-  color:#fff !important;
-  box-shadow:0 10px 24px rgba(0,0,0,.18) !important;
-}
-
-/* Back to Products (the one inside .details .actions): jet black on hover/focus */
-.details .actions .button:hover,
-.details .actions .button:focus-visible{
-  background:#111 !important;
-  border-color:#111 !important;
-  color:#fff !important;
-  box-shadow:0 10px 24px rgba(0,0,0,.18) !important;
-}
-
   </style>
 </head>
 <body class="is-preload">
@@ -208,7 +153,6 @@
           <div>
             <div class="main-image">
               <div class="frame">
-                <!-- Default image (placeholder from your Cloudinary until final photos are set) -->
                 <img
                   id="mainImage"
                   src="https://res.cloudinary.com/dkk8ohmu7/image/upload/f_auto,q_auto,w_1200/v1760798021/ChatGPT_Image_Oct_17_2025_08_59_57_PM_idg137.png"
@@ -243,18 +187,18 @@
 
             <p id="styleDesc">Roomy and durable: ideal for sports, travel, and weekend hauling with smooth-rolling wheels and a sturdy double-tube pull handle.</p>
 
-            <!-- Quantity + Actions (consistent flow) -->
-            <div class="buy-row">
-              <div class="qty" aria-label="Quantity selector">
-                <button type="button" id="minus" aria-label="Decrease quantity">−</button>
-                <input type="number" id="quantity" value="1" min="1" inputmode="numeric" aria-label="Quantity" />
-                <button type="button" id="plus" aria-label="Increase quantity">+</button>
-              </div>
-              <div class="actions">
-                <!-- Wire this to Stripe/cart later -->
-                <a href="#add" id="addToCart" class="button primary icon solid fa-check">Add to cart</a>
-              </div>
+            <!-- BUY NOW -->
+            <div class="actions" style="margin:1rem 0 .75rem;">
+              <a
+                href="https://buy.stripe.com/dRm9ATeHfa8w3VZ7nw2Ji06"
+                id="buyNow"
+                class="button primary icon solid fa-shopping-cart"
+                target="_blank"
+                rel="noopener"
+                aria-label="Buy now with Stripe"
+              >Buy Now</a>
             </div>
+
             <p class="note">Ships in 1–3 business days. Free returns within 30 days.</p>
 
             <hr />
@@ -402,32 +346,7 @@
         if (e.key === 'ArrowLeft')  setActive(((current + 1) % 3) + 1);
       });
     })();
-
-    // Quantity stepper + Add to cart (placeholder)
-    (function(){
-      var minus = document.getElementById('minus');
-      var plus  = document.getElementById('plus');
-      var qty   = document.getElementById('quantity');
-      var add   = document.getElementById('addToCart');
-
-      minus.addEventListener('click', function(){
-        var v = Math.max(1, (parseInt(qty.value,10) || 1) - 1);
-        qty.value = v;
-      });
-      plus.addEventListener('click', function(){
-        var v = Math.max(1, (parseInt(qty.value,10) || 1) + 1);
-        qty.value = v;
-      });
-      qty.addEventListener('input', function(){
-        if (!qty.value || parseInt(qty.value,10) < 1) qty.value = 1;
-      });
-
-      add.addEventListener('click', function(e){
-        // Replace with your cart/Stripe logic
-        e.preventDefault();
-        alert('Added ' + (parseInt(qty.value,10)||1) + ' to cart. (Wire this to Stripe/your cart)');
-      });
-    })();
   </script>
 </body>
 </html>
+```
